--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <main>
       <div class="card">
-        <img src="./assets/images/avatar-jessica.jpeg" />
+        <img src="./assets/images/avatar-jessica.jpeg" alt="Jessica Randall" />
         <h1>Jessica Randall</h1>
         <span>London, United Kingdom</span>
         <p>"Front-end developer and avid reader."</p>
